# fuzzytable

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  tox.ini
docs/: changelog.rst  conf.py  contributing.md  index.rst  readme_pointer.rst  requirements.txt
docs/backburner/: cookbook.rst  developers.rst  normalize.rst  worksheetparser.rst
docs/source/: anatomy.rst  change_log.rst  conf.py  contribute.rst  cookbook.rst  excelerator.rst  index.rst  modules.rst  readme_pointer.rst
docs/source/api/: cellpatterns.rst  datamodel.rst  exceptions.rst  fieldpattern.rst  fields.rst  fuzzytable.rst  index.rst  records.rst  sheet.rst
docs/source/api_ref/: exceptions.rst  field.rst  fieldparser.rst  index.rst  normalize.rst  tableparser.rst  tablereader.rst
docs/source/images/: logo.docx
docs/source/learn_fuzzytable/: cellpatterns.rst  fieldpatterns.rst  index.rst  sort.rst  spreadsheet_terminology.rst  tut1-datamodel.rst  tut2-standard.rst
docs/source/tutorials/: index.rst  sort.rst  tut1-datamodel.rst  tut2-standard.rst
documentation/: conf.py  index.rst  tutorial.rst
excelerator/: __init__.py  exceptions.py  headers.py  normalize.py  table_reader.py  utils.py  worksheet_rows.py
excelerator/main/: excel_interface.py  field.py  fieldparser.py  headers.py  table_reader.py  tableparser.py  utils.py  worksheetparser.py
fuzzytable/: __init__.py  cellpatterns.py  exceptions.py
fuzzytable/_docstringfiles/: cities.csv  colors.csv  warm_colors.csv
fuzzytable/datamodel/: __init__.py  fields.py  records.py  sheet.py
fuzzytable/main/: fuzzytable.py  sheetparser.py  sheetreader.py  string_analysis.py  utils.py
fuzzytable/main/sheet/: field.py
fuzzytable/parsers/: __init__.py  fieldparser.py  sheetparser.py
fuzzytable/patterns/: __init__.py  cellpattern.py  cellpattern_api.py  datapattern.py  fieldpattern.py  sheetpattern.py
tests/: conftest.py  test_1_fuzzytable_excel.py  test_2_exceptions.py  test_3_csv.py  test_4_data_model.py  test_5_sheetreader.py  test_6_patterns.py  test_7_fuzzymatching.py  test_exceptions.py  test_normalize.py  test_records.py  test_table_reader.py  test_tableparser.py  test_v010_fieldpatterns.py  test_v012_cellpatterns.py  test_v014_missingfields.py  v012_params.py
tests/experiments/: csv_exp.py  eggs.csv  exp_dict.py  gen.py  graveyard.py  initial.py  iter_test.py  loop.py  neg_range.py  path_list.py  paths.py  whilellop.py
tests/test_files/: birthdays.csv  data_pattern.csv  names.csv  test.csv  test.docx  test.xlsx  test_utils.xlsx  testexcel.py
