[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fuzzytable"
dist-name = "fuzzytable"
author = "Jonathan Chukinas"
author-email = "chukinas@gmail.com"
home-page = "https://github.com/jonathanchukinas/fuzzytable"
description-file = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    'Natural Language :: English',
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
keywords = "xlrd openpyxl Excel xlsx xls excel csv fuzzy"
requires = ["openpyxl==3.0.0"]
requires-python = ">=3.6.3"

[tool.flit.metadata.urls]
Documentation = "https://fuzzytable.readthedocs.io/"
Tracker = "https://github.com/jonathanchukinas/fuzzytable/issues"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",  # for testing
    "pytest-cov",  # for calculating test coverage
    "tox",  # for test automation
    "names",  # for generating random names during testing
]
docs = [
    "sphinx",  # for documentation
    "m2r",  # sphinx extension for converting markdown to reStructuredText
#    "sphinx-rtd-theme",  # sphinx readthedocs theme
]
